--- a/composer.json
+++ b/composer.json
@@ -1,21 +1,21 @@
 {
-    "name": "kanel/dynamicClassCreator",
-    "description": "creates or edits existing classes by adding methods, properties, consts...",
+    "name": "kanel/enuma",
+    "description": "creates or edits classes by adding methods, properties, consts, comments...",
     "minimum-stability": "stable",
     "require" : {
-        "php" : ">=7.0"
+        "php" : ">=7.0",
+        "phpspec/phpspec": "^4.3"
     },
     "repositories" : [ {
         "type" : "composer",
         "url" : "https://packagist.org/"
     } ],
     "require-dev" : {
-        "phpunit/phpunit": "^6.5"
     },
     "autoload" : {
         "psr-4" : {
-            "Kanel\\Dynamic\\" : "src/",
-            "Kanel\\Dynamic\\Tests\\" : "tests/"
+            "Kanel\\Enuma\\" : "src/",
+            "Kanel\\Enuma\\Tests\\" : "tests/"
         }
     },
     "authors" : [ {
